--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/web": "^9.7.5",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
