heatmap,data and wordcloud done

--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/x-charts": "^7.23.2",
+    "@mui/x-charts-pro": "^7.23.2",
     "@mui/x-data-grid": "^7.23.5",
     "@mui/x-date-pickers": "^7.23.3",
     "@mui/x-tree-view": "^7.23.2",
     "@react-spring/web": "^9.7.5",
+    "chart.js": "^4.4.7",
+    "chartjs-chart-matrix": "^2.0.1",
     "cra-template": "1.2.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.0.0",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
