--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^4.2.4"
   },
