--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "react-calendar-heatmap": "^1.9.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-wordcloud": "^1.2.7",
+    "remark-gfm": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
